<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.fragment.AboutFragment">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_test_d_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false"
        app:title="@string/home_nav_about" />

    <ImageView
        android:layout_width="@dimen/space_200"
        android:layout_height="@dimen/space_200"
        android:layout_marginTop="@dimen/space_80"
        android:layout_marginBottom="@dimen/space_80"
        android:src="@drawable/ic_drawable_books" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="@dimen/space_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_32px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_60"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/space_20"
            android:text="@string/github"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_28px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_30"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/space_20"
            android:text="@string/about_project"
            android:textColor="@color/black"
            android:padding="@dimen/space_20"
            android:textSize="@dimen/font_size_28px" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginBottom="@dimen/space_40"
        android:text="@string/about_copyright"
        android:textColor="#BDBDBD"
        android:textSize="@dimen/font_size_28px" />

</LinearLayout>